Started identifying blockage algorithms

--- a/docs/impossibleGames/2021-04-25.md
+++ b/docs/impossibleGames/2021-04-25.md
@@ -6,16 +6,16 @@ Here is the progression of a game that I can't solve:
 
 Here are the cards in the waste, in order:
 
-* 2S
-* QC
-* 3S
-* 6D
-* 3H
-* 4C
-* 5D
-* 4H
+* 2S - blocked by QC below
+* QC - blocked by 3S below
+* 3S - blocked by unavailable column (active 7S) which needs 6D
+* 6D - blocked by 3H below (I actually was able, in one of my tries, to place this, but lost something else).
+* 3H - blocked by tableau column 3D (already occupied) and column 8S (blocked from growing from available red 7 target).  Also blocked by 4C below.
+* 4C - no tableau target available: 5H already occupies one column; 8S not able receive red 7.
+* 5D - blocked by 4H below
+* 4H - no tableau target (3C already has 4D), and blocked by 6D above.
 
-I found I could reduce this somewhat more.
+I found I could reduce this somewhat more but it didn't make a difference.
 
 ## Challenges
 
@@ -24,6 +24,7 @@ Following cards still unavailable in tableau:
 * Both 7H and 7D.  These block move the 6C and 6S.
 * KH.  This prevents the JH from be moved.  There is QC in the waste but it needs the KH as well.
 * 2D and 2C.  These preclude buildling out the **diamond** and **club** foundations.
+* QS. Don't know if critical; prevents building out KH in tableau, but would likely surface together.
 
 Followings card unavailable in waste:
 
@@ -31,7 +32,31 @@ Followings card unavailable in waste:
 
 Hence, the foundation cannot be grown from the tableau because only one column is not blocked.
 
-## Summary
+## Is there an Algorithm?
 
 There is an algorithm somewhere here that identifies the combinational effect of these blocks.  I tried several approaches here and always ended up in this problem.  Can I prove this is an unsolveable hand?
 
+### Possible Approaches:
+
+Verify that hidden cards "protect" each other:
+
+* The two red 7's, if in same columns as black 6's, are a known blocker.
+* KH keeps QC in waste from being moved, so this blocks JS from being moved.  
+* So, if each of the above 3 cards are spread out evenly in the 3 blocked tableau columns,
+  then this game is unsolveable.
+ 
+A useful algorithm might be:
+
+1. At the start of the game
+
+    ```text
+        For each tableau column that has hidden cards
+          For each card in the column, starting at the bottom
+            If the card has a direct parent above it
+              and if the there is another column with the card's partner also the same ancestor's 
+              partner above it, then the game is unsolveable.
+    ```
+
+    This is a [known cause of a blocked game](/docs/unsolveables.md).
+
+1. *TODO:* Add a 3rd column with its own blockage to the above.  Now (hypothesis) the blocking cards can be in any of the 3 columns (but must be one card per column).  That is the situation we have in this example: the KH is needed for the waste QC to be played in order for the JH to be played.  We need to identify precisely that a card in the waste cannot be moved if its target is blocked by a descendent.
