Fixed markdown syntax warnings

--- a/docs/impossibleGames/2021-04-25.md
+++ b/docs/impossibleGames/2021-04-25.md
@@ -36,7 +36,7 @@ Hence, the foundation cannot be grown from the tableau because only one column i
 
 There is an algorithm somewhere here that identifies the combinational effect of these blocks.  I tried several approaches here and always ended up in this problem.  Can I prove this is an unsolveable hand?
 
-### Possible Approaches:
+### Possible Approaches
 
 Verify that hidden cards "protect" each other:
 
@@ -44,7 +44,7 @@ Verify that hidden cards "protect" each other:
 * KH keeps QC in waste from being moved, so this blocks JS from being moved.  
 * So, if each of the above 3 cards are spread out evenly in the 3 blocked tableau columns,
   then this game is unsolveable.
- 
+
 A useful algorithm might be:
 
 1. At the start of the game
