Best attempt to capture history of how that game unfolded

--- a/docs/impossibleGames/2021-04-29.md
+++ b/docs/impossibleGames/2021-04-29.md
@@ -45,4 +45,108 @@ Here's the initial screen:
 
 ![Impossible Game](/docs/imgs/impossibleGames/2021-04-29-2.png)
 
-And I forgot to get the play sequence :(
+The moves as I (hopefully) remember:
+
+1. cardMoved toCardOrEmptyTableauColumnOrFoundationColumn
+1. QS KH
+1. 2H 3S
+1. KS 1
+1. AC F
+1. 8C 9H
+1. AH F
+1. 2H F
+1. QD KS
+1. JS QD
+1. 10H JS
+1. 9S 10H
+1. KH 3
+1. 6D 7C
+1. JH QS
+1. 5C 6D
+1. AD F
+1. 7D 8C
+1. 6S 7D
+1. 4D 5C
+1. 3S 4D
+1. QH KC
+1. KC 2
+1. AS F
+1. 3H 4C
+1. 8H 9S
+1. 7C 8H
+1. 6H 7S
+1. KD 7
+1. QC KD
+1. JD QC
+1. JD 9C U
+1. QC 8D U
+1. KD 8C U
+1. 6H 7 U
+1. 7C 3 U
+1. 8H QC U
+1. 3H QC U
+1. AS QC U
+1. KC 7 U
+1. QH 2 U
+1. 3S 2 U
+1. 4D JD U
+1. 6S 6C U
+1. 7D 6S U
+1. 7H 9D U
+1. AD W U -- empty waste
+1. 5C AD U
+1. JH 5C U
+1. 6D 4C U
+1. KH 6D U
+1. KC 3 U
+1. 6H 7C U
+1. KD 7
+1. 8H 9S
+1. 7C 8H
+1. 3H F
+1. AS F
+1. QC KD
+1. JH QS
+1. 5C 6H
+1. AD F
+1. 7D 8C
+1. 4D 5C
+1. 3A 4D
+1. QH KC
+1. KD 2
+1. KH 7
+1. 6D 7S
+1. JD QC
+1. JD 9C U
+1. 6D 6 U
+1. KD 7 U
+1. QH 2 U
+1. 3S 2 U
+1. 4D JD U
+1. 7D 6S U
+1. AD W U
+1. 5C AD U
+1. JH 5C U
+1. QC 8D U
+1. AS QC U
+1. 3H AS U
+1. 7C 4 U
+1. 8H 3H U
+1. AS F
+1. QC KD
+1. 8D 9S
+1. JH QC
+1. 5C 6H
+1. AD F
+1. 7C 8D
+1. 7D 8C
+1. 6S 7D
+1. 4D 5C
+1. 3S 4D
+1. QH KP
+1. KH 2
+1. 6D 7A
+1. JD QS
+1. 3H F
+
+*ARGH!*: I was not able to retrieve the full progress before the game was replaced.
